// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Routes Snapshot Tests > should render /hello route correctly 1`] = `
<div
  class="min-h-screen bg-gradient-to-b from-stone-50 to-stone-100"
>
  <nav
    class="bg-white shadow-sm border-b border-stone-200"
  >
    <div
      class="container mx-auto px-6"
    >
      <div
        class="flex justify-between items-center py-4"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
          >
            <span
              class="text-white text-sm font-bold"
            >
              🌸
            </span>
          </div>
          <h1
            class="text-xl font-medium text-stone-800 tracking-wide"
          >
            จงบินเอาเท่าที่เราจะบินไหว
            <span
              class="text-sm text-stone-500 ml-2 font-light"
            >
              Flying App
            </span>
          </h1>
        </div>
        <div
          class="flex space-x-3"
        >
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-green-500 text-white shadow-md"
            data-discover="true"
            href="/hello"
          >
            <span
              class="text-lg"
            >
              🌸
            </span>
            <span
              class="text-sm font-medium"
            >
              หน้าแรก
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/home"
          >
            <span
              class="text-lg"
            >
              🏦
            </span>
            <span
              class="text-sm font-medium"
            >
              ธนาคาร
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/music"
          >
            <span
              class="text-lg"
            >
              🎵
            </span>
            <span
              class="text-sm font-medium"
            >
              กลอนดัง
            </span>
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div>
    <div
      class="min-h-screen bg-neutral-50"
    >
      <div
        class="bg-gradient-to-r from-green-600 to-green-700 text-white p-6 shadow-md"
      >
        <div
          class="flex justify-between items-center max-w-6xl mx-auto"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="bg-white text-green-600 rounded-lg p-3 font-bold text-xl shadow-sm"
            >
              ไทย
            </div>
            <div>
              <div
                class="font-semibold text-xl"
              >
                ไทยแบงก์
              </div>
              <div
                class="text-sm text-green-100 font-normal"
              >
                Thai Bank
              </div>
            </div>
          </div>
          <div
            class="flex items-center space-x-6"
          >
            <div
              class="bg-yellow-400 text-neutral-800 rounded-full w-8 h-8 flex items-center justify-center text-sm font-semibold shadow-sm"
            >
              1
            </div>
            <div
              class="text-right"
            >
              <div
                class="text-sm font-medium"
              >
                ระบบต้อนรับ
              </div>
              <div
                class="text-xs text-green-100"
              >
                Welcome System
              </div>
            </div>
            <div
              class="text-2xl"
            >
              🌸
            </div>
          </div>
        </div>
      </div>
      <div
        class="p-6 max-w-6xl mx-auto"
      >
        <div
          class="bg-white rounded-lg p-8 shadow border border-neutral-200"
        >
          <div
            class="flex justify-between items-start"
          >
            <div>
              <div
                class="text-sm text-neutral-500 mb-3 font-normal"
              >
                ยินดีต้อนรับ • Welcome
              </div>
              <div
                class="text-5xl font-normal text-neutral-700 mb-3"
              >
                สวัสดีครับ
              </div>
              <div
                class="text-sm text-neutral-400 font-normal"
              >
                แอปพลิเคชัน React • React Application
              </div>
            </div>
            <div
              class="text-right"
            >
              <div
                class="w-12 h-12 border-2 border-green-200 rounded-lg flex items-center justify-center mb-3 bg-green-50"
              >
                🌸
              </div>
              <div
                class="text-xs text-neutral-400 font-normal"
              >
                เตรียมพร้อม: เรียบร้อย
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-6 pb-6 max-w-6xl mx-auto"
      >
        <div
          class="grid lg:grid-cols-2 gap-8"
        >
          <div
            class="bg-white rounded-lg p-8 shadow border border-neutral-200"
          >
            <div
              class="flex items-center space-x-4 mb-8"
            >
              <div
                class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
              >
                ⚡
              </div>
              <div>
                <h2
                  class="text-2xl font-normal text-neutral-700"
                >
                  คุณลักษณะ
                </h2>
                <p
                  class="text-sm text-neutral-500 font-normal"
                >
                  Features
                </p>
              </div>
            </div>
            <div
              class="space-y-4"
            >
              <div
                class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-green-500"
                  >
                    ⚡
                  </div>
                  <div>
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-neutral-700"
                      >
                        การพัฒนาที่รวดเร็ว
                      </span>
                      <span
                        class="text-sm text-neutral-500 font-normal"
                      >
                        Vite
                      </span>
                    </div>
                    <div
                      class="text-sm text-neutral-600 font-normal"
                    >
                      Fast Development with Vite
                    </div>
                  </div>
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  พร้อมใช้งาน
                </div>
              </div>
              <div
                class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-blue-500"
                  >
                    ⚛️
                  </div>
                  <div>
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-neutral-700"
                      >
                        React 18
                      </span>
                      <span
                        class="text-sm text-neutral-500 font-normal"
                      >
                        Latest
                      </span>
                    </div>
                    <div
                      class="text-sm text-neutral-600 font-normal"
                    >
                      เวอร์ชันล่าสุด
                    </div>
                  </div>
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  อัปเดต
                </div>
              </div>
              <div
                class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-purple-500"
                  >
                    🎨
                  </div>
                  <div>
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-neutral-700"
                      >
                        Tailwind CSS
                      </span>
                      <span
                        class="text-sm text-neutral-500 font-normal"
                      >
                        Styling
                      </span>
                    </div>
                    <div
                      class="text-sm text-neutral-600 font-normal"
                    >
                      การจัดรูปแบบ
                    </div>
                  </div>
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  ใช้งานได้
                </div>
              </div>
              <div
                class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
                  >
                    🔥
                  </div>
                  <div>
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-neutral-700"
                      >
                        Hot Reload
                      </span>
                      <span
                        class="text-sm text-neutral-500 font-normal"
                      >
                        Live
                      </span>
                    </div>
                    <div
                      class="text-sm text-neutral-600 font-normal"
                    >
                      รองรับการอัปเดตสด
                    </div>
                  </div>
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  เชื่อมต่อแล้ว
                </div>
              </div>
              <div
                class="pt-4 border-t border-neutral-200"
              >
                <button
                  class="w-full text-neutral-500 py-3 rounded-md font-normal hover:bg-neutral-50 hover:text-neutral-700 transition-colors duration-200"
                >
                  ดูคุณลักษณะทั้งหมด • View All Features
                </button>
              </div>
            </div>
          </div>
          <div
            class="bg-white rounded-lg p-8 shadow border border-neutral-200"
          >
            <div
              class="flex items-center space-x-4 mb-8"
            >
              <div
                class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
              >
                🚀
              </div>
              <div>
                <h2
                  class="text-2xl font-normal text-neutral-700"
                >
                  เริ่มต้นใช้งาน
                </h2>
                <p
                  class="text-sm text-neutral-500 font-normal"
                >
                  Getting Started
                </p>
              </div>
            </div>
            <div
              class="space-y-6"
            >
              <div
                class="text-center space-y-4"
              >
                <div
                  class="w-20 h-20 bg-gradient-to-br from-green-500 to-green-600 rounded-full flex items-center justify-center shadow-lg mx-auto"
                >
                  <span
                    class="text-white text-2xl"
                  >
                    🌸
                  </span>
                </div>
                <div>
                  <div
                    class="text-xl font-medium text-neutral-700 mb-2"
                  >
                    ยินดีต้อนรับสู่โลกแห่งซากุระ
                  </div>
                  <div
                    class="text-sm text-neutral-500 font-normal"
                  >
                    Welcome to your elegant React Application
                  </div>
                </div>
              </div>
              <div
                class="space-y-6"
              >
                <div>
                  <label
                    class="block text-sm font-medium text-neutral-700 mb-3"
                  >
                    ชื่อผู้ใช้ • Username
                  </label>
                  <div
                    class="relative"
                  >
                    <span
                      class="absolute left-4 top-1/2 transform -translate-y-1/2 text-neutral-400"
                    >
                      👤
                    </span>
                    <input
                      class="w-full pl-12 pr-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent bg-neutral-50 font-normal"
                      placeholder="กรอกชื่อของคุณ"
                      type="text"
                    />
                  </div>
                </div>
                <button
                  class="w-full bg-green-500 text-white py-3 rounded-md font-medium hover:bg-green-600 transition-colors duration-200 shadow-sm hover:shadow-md"
                >
                  เริ่มต้นใช้งาน • Get Started
                </button>
                <button
                  class="w-full text-center bg-blue-50 text-blue-700 border-2 border-blue-200 hover:border-blue-300 hover:bg-blue-100 py-3 rounded-md font-medium transition-all duration-200 shadow-sm hover:shadow-md"
                >
                  📚 เอกสารประกอบ • Documentation
                </button>
              </div>
              <div
                class="pt-4 border-t border-neutral-200"
              >
                <div
                  class="text-xs text-neutral-400 text-center font-normal"
                >
                  อัปเดตล่าสุด: เมื่อกี้นี้ • Last updated: just now
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center p-8 space-y-6"
    >
      <button
        class="px-8 py-3 bg-green-500 text-white rounded-full font-medium shadow-lg hover:bg-green-600 hover:shadow-xl transform hover:scale-105 active:scale-95 transition-all duration-200"
      >
        นับ: 
        0
      </button>
      <div
        class="bg-white rounded-2xl p-6 max-w-md text-center shadow-sm border border-stone-200"
      >
        <p
          class="text-stone-600 mb-2 text-sm leading-relaxed"
        >
          <code
            class="bg-stone-100 px-2 py-1 rounded text-sm font-mono text-red-600"
          >
            src/App.jsx
          </code>
           แก้ไขและบันทึกเพื่อทดสอบ HMR
        </p>
        <p
          class="text-xs text-stone-500"
        >
          Edit 
          <code
            class="bg-stone-100 px-2 py-1 rounded text-xs font-mono text-red-600"
          >
            src/App.jsx
          </code>
           and save to test HMR
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Routes Snapshot Tests > should render /home route (BankingPage) correctly 1`] = `
<div
  class="min-h-screen bg-gradient-to-b from-stone-50 to-stone-100"
>
  <nav
    class="bg-white shadow-sm border-b border-stone-200"
  >
    <div
      class="container mx-auto px-6"
    >
      <div
        class="flex justify-between items-center py-4"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
          >
            <span
              class="text-white text-sm font-bold"
            >
              🌸
            </span>
          </div>
          <h1
            class="text-xl font-medium text-stone-800 tracking-wide"
          >
            จงบินเอาเท่าที่เราจะบินไหว
            <span
              class="text-sm text-stone-500 ml-2 font-light"
            >
              Flying App
            </span>
          </h1>
        </div>
        <div
          class="flex space-x-3"
        >
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/hello"
          >
            <span
              class="text-lg"
            >
              🌸
            </span>
            <span
              class="text-sm font-medium"
            >
              หน้าแรก
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-green-600 text-white shadow-md"
            data-discover="true"
            href="/home"
          >
            <span
              class="text-lg"
            >
              🏦
            </span>
            <span
              class="text-sm font-medium"
            >
              ธนาคาร
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/music"
          >
            <span
              class="text-lg"
            >
              🎵
            </span>
            <span
              class="text-sm font-medium"
            >
              กลอนดัง
            </span>
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="min-h-screen bg-neutral-50"
  >
    <div
      class="bg-gradient-to-r from-green-600 to-green-700 text-white p-6 shadow-md"
    >
      <div
        class="flex justify-between items-center max-w-6xl mx-auto"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="bg-white text-green-600 rounded-lg p-3 font-bold text-xl shadow-sm"
          >
            ไทย
          </div>
          <div>
            <div
              class="font-semibold text-xl"
            >
              ไทยแบงก์
            </div>
            <div
              class="text-sm text-green-100 font-normal"
            >
              Thai Bank
            </div>
          </div>
        </div>
        <div
          class="flex items-center space-x-6"
        >
          <div
            class="bg-yellow-400 text-neutral-800 rounded-full w-8 h-8 flex items-center justify-center text-sm font-semibold shadow-sm"
          >
            2
          </div>
          <div
            class="text-right"
          >
            <div
              class="text-sm font-medium"
            >
              คุณสมชาย จันทร์แสง
            </div>
            <div
              class="text-xs text-green-100"
            >
              Somchai Jansaeng
            </div>
          </div>
          <div
            class="text-2xl"
          >
            🇹🇭
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-6 max-w-6xl mx-auto"
    >
      <div
        class="bg-white rounded-lg p-8 shadow border border-neutral-200"
      >
        <div
          class="flex justify-between items-start"
        >
          <div>
            <div
              class="text-sm text-neutral-500 mb-3 font-normal"
            >
              ยอดเงินคงเหลือ • Available Balance
            </div>
            <div
              class="text-5xl font-normal text-neutral-700 mb-3"
            >
              ฿1,575,050
            </div>
            <div
              class="text-sm text-neutral-400 font-normal"
            >
              เลขที่บัญชี: •••• 1234
            </div>
          </div>
          <div
            class="text-right"
          >
            <div
              class="w-12 h-12 border-2 border-green-200 rounded-lg flex items-center justify-center mb-3 bg-green-50"
            >
              🔄
            </div>
            <div
              class="text-xs text-neutral-400 font-normal"
            >
              อัปเดตล่าสุด: เมื่อกี้นี้
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-6 pb-6 max-w-6xl mx-auto"
    >
      <div
        class="grid lg:grid-cols-2 gap-8"
      >
        <div
          class="bg-white rounded-lg p-8 shadow border border-neutral-200"
        >
          <div
            class="flex items-center space-x-4 mb-8"
          >
            <div
              class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
            >
              💸
            </div>
            <div>
              <h2
                class="text-2xl font-normal text-neutral-700"
              >
                โอนเงิน
              </h2>
              <p
                class="text-sm text-neutral-500 font-normal"
              >
                Send Money
              </p>
            </div>
          </div>
          <div
            class="space-y-6"
          >
            <div>
              <label
                class="block text-sm font-medium text-neutral-700 mb-3"
              >
                ผู้รับเงิน • Recipient
              </label>
              <div
                class="relative"
              >
                <span
                  class="absolute left-4 top-1/2 transform -translate-y-1/2 text-neutral-400"
                >
                  👤
                </span>
                <input
                  class="w-full pl-12 pr-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent bg-neutral-50 font-normal"
                  placeholder="@username123"
                  type="text"
                />
              </div>
            </div>
            <div>
              <label
                class="block text-sm font-medium text-neutral-700 mb-3"
              >
                จำนวนเงิน • Amount (฿)
              </label>
              <div
                class="relative"
              >
                <span
                  class="absolute left-4 top-1/2 transform -translate-y-1/2 text-neutral-400"
                >
                  ฿
                </span>
                <input
                  class="w-full pl-12 pr-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent bg-neutral-50 font-normal"
                  placeholder="0"
                  type="number"
                />
              </div>
            </div>
            <div>
              <label
                class="block text-sm font-medium text-neutral-700 mb-3"
              >
                หมายเหตุ • Memo (ไม่บังคับ)
              </label>
              <textarea
                class="w-full px-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent resize-none bg-neutral-50 font-normal"
                placeholder="กรุณาระบุวัตถุประสงค์ในการโอนเงิน"
                rows="3"
              />
            </div>
            <button
              class="w-full bg-green-500 text-white py-3 rounded-md font-medium hover:bg-green-600 transition-colors duration-200 shadow-sm hover:shadow-md"
            >
              ไปยังหน้าตรวจสอบ • Continue to Review
            </button>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-8 shadow border border-neutral-200"
        >
          <div
            class="flex items-center space-x-4 mb-8"
          >
            <div
              class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
            >
              📋
            </div>
            <div>
              <h2
                class="text-2xl font-normal text-neutral-700"
              >
                ประวัติการทำรายการ
              </h2>
              <p
                class="text-sm text-neutral-500 font-normal"
              >
                Recent Transactions
              </p>
            </div>
          </div>
          <div
            class="space-y-4"
          >
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
                >
                  ↗️
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      สมชาย จันทร์แสง
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      @somchai_j
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    ค่าอาหารกลางวัน 🍱
                  </div>
                  <div
                    class="text-xs text-neutral-400 font-normal"
                  >
                    2025-06-19 • 11:12
                  </div>
                </div>
              </div>
              <div
                class="text-right"
              >
                <div
                  class="font-medium text-lg text-red-600"
                >
                  ฿
                  1234
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  เสร็จสิ้น
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
                >
                  ↗️
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      สมหญิง ศรีสุข
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      @somying_s
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    ค่ากาแฟ ☕
                  </div>
                  <div
                    class="text-xs text-neutral-400 font-normal"
                  >
                    2024-01-15 • 14:30
                  </div>
                </div>
              </div>
              <div
                class="text-right"
              >
                <div
                  class="font-medium text-lg text-red-600"
                >
                  ฿
                  250
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  เสร็จสิ้น
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-green-500"
                >
                  ↙️
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      วิชัย รุ่งเรือง
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      @wichai_r
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    ค่าเช่าบ้าน 🏠
                  </div>
                  <div
                    class="text-xs text-neutral-400 font-normal"
                  >
                    2024-01-15 • 09:15
                  </div>
                </div>
              </div>
              <div
                class="text-right"
              >
                <div
                  class="font-medium text-lg text-green-600"
                >
                  +
                  ฿
                  500
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  เสร็จสิ้น
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
                >
                  ↗️
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      มาลี ใจดี
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      @malee_j
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    ค่าช้อปปิ้ง 🛍️
                  </div>
                  <div
                    class="text-xs text-neutral-400 font-normal"
                  >
                    2024-01-14 • 16:45
                  </div>
                </div>
              </div>
              <div
                class="text-right"
              >
                <div
                  class="font-medium text-lg text-red-600"
                >
                  ฿
                  76
                </div>
                <div
                  class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
                >
                  เสร็จสิ้น
                </div>
              </div>
            </div>
            <div
              class="pt-4 border-t border-neutral-200"
            >
              <button
                class="w-full text-neutral-500 py-3 rounded-md font-normal hover:bg-neutral-50 hover:text-neutral-700 transition-colors duration-200"
              >
                ดูรายการทั้งหมด • View All Transactions
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Routes Snapshot Tests > should render /music route (PoemPage) correctly 1`] = `
<div
  class="min-h-screen bg-gradient-to-b from-stone-50 to-stone-100"
>
  <nav
    class="bg-white shadow-sm border-b border-stone-200"
  >
    <div
      class="container mx-auto px-6"
    >
      <div
        class="flex justify-between items-center py-4"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
          >
            <span
              class="text-white text-sm font-bold"
            >
              🌸
            </span>
          </div>
          <h1
            class="text-xl font-medium text-stone-800 tracking-wide"
          >
            จงบินเอาเท่าที่เราจะบินไหว
            <span
              class="text-sm text-stone-500 ml-2 font-light"
            >
              Flying App
            </span>
          </h1>
        </div>
        <div
          class="flex space-x-3"
        >
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/hello"
          >
            <span
              class="text-lg"
            >
              🌸
            </span>
            <span
              class="text-sm font-medium"
            >
              หน้าแรก
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/home"
          >
            <span
              class="text-lg"
            >
              🏦
            </span>
            <span
              class="text-sm font-medium"
            >
              ธนาคาร
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-amber-500 text-white shadow-md"
            data-discover="true"
            href="/music"
          >
            <span
              class="text-lg"
            >
              🎵
            </span>
            <span
              class="text-sm font-medium"
            >
              กลอนดัง
            </span>
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="min-h-screen bg-gradient-to-b from-amber-50 to-orange-50"
  >
    <div
      class="container mx-auto px-6 py-12"
    >
      <div
        class="text-center mb-12"
      >
        <h1
          class="text-4xl font-bold text-amber-800 mb-4"
        >
          กลอนดัง
        </h1>
        <div
          class="w-24 h-1 bg-gradient-to-r from-amber-400 to-orange-400 mx-auto rounded-full"
        />
      </div>
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="bg-white rounded-3xl shadow-xl overflow-hidden"
        >
          <div
            class="relative bg-gradient-to-br from-amber-100 to-orange-100 p-8"
          >
            <div
              class="flex justify-center"
            >
              <img
                alt="Young boy smiling"
                class="w-64 h-64 object-cover rounded-2xl shadow-lg border-4 border-white"
                src="/poem.png"
              />
            </div>
          </div>
          <div
            class="p-8 lg:p-12"
          >
            <div
              class="text-center mb-8"
            >
              <h2
                class="text-2xl font-semibold text-amber-800 mb-6"
              >
                "ไม่ต้องบินให้สูงอย่างใครเขา"
              </h2>
            </div>
            <div
              class="prose prose-lg max-w-none text-center"
            >
              <div
                class="bg-gradient-to-r from-amber-50 to-orange-50 rounded-2xl p-8 border-l-4 border-amber-400"
              >
                <p
                  class="text-lg leading-relaxed text-gray-700 mb-6"
                >
                  <span
                    class="font-medium text-amber-800"
                  >
                    "ไม่ต้องบินให้สูงอย่างใครเขา"
                  </span>
                  เป็นวลีที่ได้รับความนิยมในประเทศไทยช่วงนี้
                </p>
                <p
                  class="text-lg leading-relaxed text-gray-700 mb-8"
                >
                  เป็นส่วนหนึ่งของบทกลอนที่ว่า
                </p>
                <div
                  class="bg-white rounded-xl p-6 shadow-md border border-amber-200"
                >
                  <div
                    class="text-xl leading-relaxed text-amber-900 space-y-4"
                  >
                    <p
                      class="font-medium"
                    >
                      "ไม่ต้องบินให้สูงอย่างใครเขา
                    </p>
                    <p
                      class="font-medium"
                    >
                      จงบินเอาเท่าที่เราจะบินไหว
                    </p>
                    <p
                      class="font-medium"
                    >
                      ถ้าที่บินไม่จำเป็นต้องเหมือนใคร
                    </p>
                    <p
                      class="font-medium"
                    >
                      แค่บินไปให้ถึงฝันเท่านั้นพอ"
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex justify-center mt-8 space-x-4"
            >
              <div
                class="w-3 h-3 bg-amber-400 rounded-full"
              />
              <div
                class="w-3 h-3 bg-orange-400 rounded-full"
              />
              <div
                class="w-3 h-3 bg-amber-400 rounded-full"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Routes Snapshot Tests > should render root route (/) correctly 1`] = `
<div
  class="min-h-screen bg-gradient-to-b from-stone-50 to-stone-100"
>
  <nav
    class="bg-white shadow-sm border-b border-stone-200"
  >
    <div
      class="container mx-auto px-6"
    >
      <div
        class="flex justify-between items-center py-4"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
          >
            <span
              class="text-white text-sm font-bold"
            >
              🌸
            </span>
          </div>
          <h1
            class="text-xl font-medium text-stone-800 tracking-wide"
          >
            จงบินเอาเท่าที่เราจะบินไหว
            <span
              class="text-sm text-stone-500 ml-2 font-light"
            >
              Flying App
            </span>
          </h1>
        </div>
        <div
          class="flex space-x-3"
        >
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-green-500 text-white shadow-md"
            data-discover="true"
            href="/hello"
          >
            <span
              class="text-lg"
            >
              🌸
            </span>
            <span
              class="text-sm font-medium"
            >
              หน้าแรก
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/home"
          >
            <span
              class="text-lg"
            >
              🏦
            </span>
            <span
              class="text-sm font-medium"
            >
              ธนาคาร
            </span>
          </a>
          <a
            class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
            data-discover="true"
            href="/music"
          >
            <span
              class="text-lg"
            >
              🎵
            </span>
            <span
              class="text-sm font-medium"
            >
              กลอนดัง
            </span>
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="min-h-screen bg-neutral-50"
  >
    <div
      class="bg-gradient-to-r from-green-600 to-green-700 text-white p-6 shadow-md"
    >
      <div
        class="flex justify-between items-center max-w-6xl mx-auto"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="bg-white text-green-600 rounded-lg p-3 font-bold text-xl shadow-sm"
          >
            ไทย
          </div>
          <div>
            <div
              class="font-semibold text-xl"
            >
              ไทยแบงก์
            </div>
            <div
              class="text-sm text-green-100 font-normal"
            >
              Thai Bank
            </div>
          </div>
        </div>
        <div
          class="flex items-center space-x-6"
        >
          <div
            class="bg-yellow-400 text-neutral-800 rounded-full w-8 h-8 flex items-center justify-center text-sm font-semibold shadow-sm"
          >
            1
          </div>
          <div
            class="text-right"
          >
            <div
              class="text-sm font-medium"
            >
              ระบบต้อนรับ
            </div>
            <div
              class="text-xs text-green-100"
            >
              Welcome System
            </div>
          </div>
          <div
            class="text-2xl"
          >
            🌸
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-6 max-w-6xl mx-auto"
    >
      <div
        class="bg-white rounded-lg p-8 shadow border border-neutral-200"
      >
        <div
          class="flex justify-between items-start"
        >
          <div>
            <div
              class="text-sm text-neutral-500 mb-3 font-normal"
            >
              ยินดีต้อนรับ • Welcome
            </div>
            <div
              class="text-5xl font-normal text-neutral-700 mb-3"
            >
              สวัสดีครับ
            </div>
            <div
              class="text-sm text-neutral-400 font-normal"
            >
              แอปพลิเคชัน React • React Application
            </div>
          </div>
          <div
            class="text-right"
          >
            <div
              class="w-12 h-12 border-2 border-green-200 rounded-lg flex items-center justify-center mb-3 bg-green-50"
            >
              🌸
            </div>
            <div
              class="text-xs text-neutral-400 font-normal"
            >
              เตรียมพร้อม: เรียบร้อย
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-6 pb-6 max-w-6xl mx-auto"
    >
      <div
        class="grid lg:grid-cols-2 gap-8"
      >
        <div
          class="bg-white rounded-lg p-8 shadow border border-neutral-200"
        >
          <div
            class="flex items-center space-x-4 mb-8"
          >
            <div
              class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
            >
              ⚡
            </div>
            <div>
              <h2
                class="text-2xl font-normal text-neutral-700"
              >
                คุณลักษณะ
              </h2>
              <p
                class="text-sm text-neutral-500 font-normal"
              >
                Features
              </p>
            </div>
          </div>
          <div
            class="space-y-4"
          >
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-green-500"
                >
                  ⚡
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      การพัฒนาที่รวดเร็ว
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      Vite
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    Fast Development with Vite
                  </div>
                </div>
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                พร้อมใช้งาน
              </div>
            </div>
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-blue-500"
                >
                  ⚛️
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      React 18
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      Latest
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    เวอร์ชันล่าสุด
                  </div>
                </div>
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                อัปเดต
              </div>
            </div>
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-purple-500"
                >
                  🎨
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      Tailwind CSS
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      Styling
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    การจัดรูปแบบ
                  </div>
                </div>
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                ใช้งานได้
              </div>
            </div>
            <div
              class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
            >
              <div
                class="flex items-center space-x-4"
              >
                <div
                  class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
                >
                  🔥
                </div>
                <div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span
                      class="font-medium text-neutral-700"
                    >
                      Hot Reload
                    </span>
                    <span
                      class="text-sm text-neutral-500 font-normal"
                    >
                      Live
                    </span>
                  </div>
                  <div
                    class="text-sm text-neutral-600 font-normal"
                  >
                    รองรับการอัปเดตสด
                  </div>
                </div>
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                เชื่อมต่อแล้ว
              </div>
            </div>
            <div
              class="pt-4 border-t border-neutral-200"
            >
              <button
                class="w-full text-neutral-500 py-3 rounded-md font-normal hover:bg-neutral-50 hover:text-neutral-700 transition-colors duration-200"
              >
                ดูคุณลักษณะทั้งหมด • View All Features
              </button>
            </div>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-8 shadow border border-neutral-200"
        >
          <div
            class="flex items-center space-x-4 mb-8"
          >
            <div
              class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
            >
              🚀
            </div>
            <div>
              <h2
                class="text-2xl font-normal text-neutral-700"
              >
                เริ่มต้นใช้งาน
              </h2>
              <p
                class="text-sm text-neutral-500 font-normal"
              >
                Getting Started
              </p>
            </div>
          </div>
          <div
            class="space-y-6"
          >
            <div
              class="text-center space-y-4"
            >
              <div
                class="w-20 h-20 bg-gradient-to-br from-green-500 to-green-600 rounded-full flex items-center justify-center shadow-lg mx-auto"
              >
                <span
                  class="text-white text-2xl"
                >
                  🌸
                </span>
              </div>
              <div>
                <div
                  class="text-xl font-medium text-neutral-700 mb-2"
                >
                  ยินดีต้อนรับสู่โลกแห่งซากุระ
                </div>
                <div
                  class="text-sm text-neutral-500 font-normal"
                >
                  Welcome to your elegant React Application
                </div>
              </div>
            </div>
            <div
              class="space-y-6"
            >
              <div>
                <label
                  class="block text-sm font-medium text-neutral-700 mb-3"
                >
                  ชื่อผู้ใช้ • Username
                </label>
                <div
                  class="relative"
                >
                  <span
                    class="absolute left-4 top-1/2 transform -translate-y-1/2 text-neutral-400"
                  >
                    👤
                  </span>
                  <input
                    class="w-full pl-12 pr-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent bg-neutral-50 font-normal"
                    placeholder="กรอกชื่อของคุณ"
                    type="text"
                  />
                </div>
              </div>
              <button
                class="w-full bg-green-500 text-white py-3 rounded-md font-medium hover:bg-green-600 transition-colors duration-200 shadow-sm hover:shadow-md"
              >
                เริ่มต้นใช้งาน • Get Started
              </button>
              <button
                class="w-full text-center bg-blue-50 text-blue-700 border-2 border-blue-200 hover:border-blue-300 hover:bg-blue-100 py-3 rounded-md font-medium transition-all duration-200 shadow-sm hover:shadow-md"
              >
                📚 เอกสารประกอบ • Documentation
              </button>
            </div>
            <div
              class="pt-4 border-t border-neutral-200"
            >
              <div
                class="text-xs text-neutral-400 text-center font-normal"
              >
                อัปเดตล่าสุด: เมื่อกี้นี้ • Last updated: just now
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Individual Components Snapshot Tests > should render BankingPage component correctly 1`] = `
<div
  class="min-h-screen bg-neutral-50"
>
  <div
    class="bg-gradient-to-r from-green-600 to-green-700 text-white p-6 shadow-md"
  >
    <div
      class="flex justify-between items-center max-w-6xl mx-auto"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="bg-white text-green-600 rounded-lg p-3 font-bold text-xl shadow-sm"
        >
          ไทย
        </div>
        <div>
          <div
            class="font-semibold text-xl"
          >
            ไทยแบงก์
          </div>
          <div
            class="text-sm text-green-100 font-normal"
          >
            Thai Bank
          </div>
        </div>
      </div>
      <div
        class="flex items-center space-x-6"
      >
        <div
          class="bg-yellow-400 text-neutral-800 rounded-full w-8 h-8 flex items-center justify-center text-sm font-semibold shadow-sm"
        >
          2
        </div>
        <div
          class="text-right"
        >
          <div
            class="text-sm font-medium"
          >
            คุณสมชาย จันทร์แสง
          </div>
          <div
            class="text-xs text-green-100"
          >
            Somchai Jansaeng
          </div>
        </div>
        <div
          class="text-2xl"
        >
          🇹🇭
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 max-w-6xl mx-auto"
  >
    <div
      class="bg-white rounded-lg p-8 shadow border border-neutral-200"
    >
      <div
        class="flex justify-between items-start"
      >
        <div>
          <div
            class="text-sm text-neutral-500 mb-3 font-normal"
          >
            ยอดเงินคงเหลือ • Available Balance
          </div>
          <div
            class="text-5xl font-normal text-neutral-700 mb-3"
          >
            ฿1,575,050
          </div>
          <div
            class="text-sm text-neutral-400 font-normal"
          >
            เลขที่บัญชี: •••• 1234
          </div>
        </div>
        <div
          class="text-right"
        >
          <div
            class="w-12 h-12 border-2 border-green-200 rounded-lg flex items-center justify-center mb-3 bg-green-50"
          >
            🔄
          </div>
          <div
            class="text-xs text-neutral-400 font-normal"
          >
            อัปเดตล่าสุด: เมื่อกี้นี้
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="px-6 pb-6 max-w-6xl mx-auto"
  >
    <div
      class="grid lg:grid-cols-2 gap-8"
    >
      <div
        class="bg-white rounded-lg p-8 shadow border border-neutral-200"
      >
        <div
          class="flex items-center space-x-4 mb-8"
        >
          <div
            class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
          >
            💸
          </div>
          <div>
            <h2
              class="text-2xl font-normal text-neutral-700"
            >
              โอนเงิน
            </h2>
            <p
              class="text-sm text-neutral-500 font-normal"
            >
              Send Money
            </p>
          </div>
        </div>
        <div
          class="space-y-6"
        >
          <div>
            <label
              class="block text-sm font-medium text-neutral-700 mb-3"
            >
              ผู้รับเงิน • Recipient
            </label>
            <div
              class="relative"
            >
              <span
                class="absolute left-4 top-1/2 transform -translate-y-1/2 text-neutral-400"
              >
                👤
              </span>
              <input
                class="w-full pl-12 pr-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent bg-neutral-50 font-normal"
                placeholder="@username123"
                type="text"
              />
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-neutral-700 mb-3"
            >
              จำนวนเงิน • Amount (฿)
            </label>
            <div
              class="relative"
            >
              <span
                class="absolute left-4 top-1/2 transform -translate-y-1/2 text-neutral-400"
              >
                ฿
              </span>
              <input
                class="w-full pl-12 pr-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent bg-neutral-50 font-normal"
                placeholder="0"
                type="number"
              />
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-neutral-700 mb-3"
            >
              หมายเหตุ • Memo (ไม่บังคับ)
            </label>
            <textarea
              class="w-full px-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent resize-none bg-neutral-50 font-normal"
              placeholder="กรุณาระบุวัตถุประสงค์ในการโอนเงิน"
              rows="3"
            />
          </div>
          <button
            class="w-full bg-green-500 text-white py-3 rounded-md font-medium hover:bg-green-600 transition-colors duration-200 shadow-sm hover:shadow-md"
          >
            ไปยังหน้าตรวจสอบ • Continue to Review
          </button>
        </div>
      </div>
      <div
        class="bg-white rounded-lg p-8 shadow border border-neutral-200"
      >
        <div
          class="flex items-center space-x-4 mb-8"
        >
          <div
            class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
          >
            📋
          </div>
          <div>
            <h2
              class="text-2xl font-normal text-neutral-700"
            >
              ประวัติการทำรายการ
            </h2>
            <p
              class="text-sm text-neutral-500 font-normal"
            >
              Recent Transactions
            </p>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
              >
                ↗️
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    สมชาย จันทร์แสง
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    @somchai_j
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  ค่าอาหารกลางวัน 🍱
                </div>
                <div
                  class="text-xs text-neutral-400 font-normal"
                >
                  2025-06-19 • 11:12
                </div>
              </div>
            </div>
            <div
              class="text-right"
            >
              <div
                class="font-medium text-lg text-red-600"
              >
                ฿
                1234
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                เสร็จสิ้น
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
              >
                ↗️
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    สมหญิง ศรีสุข
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    @somying_s
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  ค่ากาแฟ ☕
                </div>
                <div
                  class="text-xs text-neutral-400 font-normal"
                >
                  2024-01-15 • 14:30
                </div>
              </div>
            </div>
            <div
              class="text-right"
            >
              <div
                class="font-medium text-lg text-red-600"
              >
                ฿
                250
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                เสร็จสิ้น
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-green-500"
              >
                ↙️
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    วิชัย รุ่งเรือง
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    @wichai_r
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  ค่าเช่าบ้าน 🏠
                </div>
                <div
                  class="text-xs text-neutral-400 font-normal"
                >
                  2024-01-15 • 09:15
                </div>
              </div>
            </div>
            <div
              class="text-right"
            >
              <div
                class="font-medium text-lg text-green-600"
              >
                +
                ฿
                500
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                เสร็จสิ้น
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
              >
                ↗️
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    มาลี ใจดี
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    @malee_j
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  ค่าช้อปปิ้ง 🛍️
                </div>
                <div
                  class="text-xs text-neutral-400 font-normal"
                >
                  2024-01-14 • 16:45
                </div>
              </div>
            </div>
            <div
              class="text-right"
            >
              <div
                class="font-medium text-lg text-red-600"
              >
                ฿
                76
              </div>
              <div
                class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
              >
                เสร็จสิ้น
              </div>
            </div>
          </div>
          <div
            class="pt-4 border-t border-neutral-200"
          >
            <button
              class="w-full text-neutral-500 py-3 rounded-md font-normal hover:bg-neutral-50 hover:text-neutral-700 transition-colors duration-200"
            >
              ดูรายการทั้งหมด • View All Transactions
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Individual Components Snapshot Tests > should render HelloPage component correctly 1`] = `
<div
  class="min-h-screen bg-neutral-50"
>
  <div
    class="bg-gradient-to-r from-green-600 to-green-700 text-white p-6 shadow-md"
  >
    <div
      class="flex justify-between items-center max-w-6xl mx-auto"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="bg-white text-green-600 rounded-lg p-3 font-bold text-xl shadow-sm"
        >
          ไทย
        </div>
        <div>
          <div
            class="font-semibold text-xl"
          >
            ไทยแบงก์
          </div>
          <div
            class="text-sm text-green-100 font-normal"
          >
            Thai Bank
          </div>
        </div>
      </div>
      <div
        class="flex items-center space-x-6"
      >
        <div
          class="bg-yellow-400 text-neutral-800 rounded-full w-8 h-8 flex items-center justify-center text-sm font-semibold shadow-sm"
        >
          1
        </div>
        <div
          class="text-right"
        >
          <div
            class="text-sm font-medium"
          >
            ระบบต้อนรับ
          </div>
          <div
            class="text-xs text-green-100"
          >
            Welcome System
          </div>
        </div>
        <div
          class="text-2xl"
        >
          🌸
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 max-w-6xl mx-auto"
  >
    <div
      class="bg-white rounded-lg p-8 shadow border border-neutral-200"
    >
      <div
        class="flex justify-between items-start"
      >
        <div>
          <div
            class="text-sm text-neutral-500 mb-3 font-normal"
          >
            ยินดีต้อนรับ • Welcome
          </div>
          <div
            class="text-5xl font-normal text-neutral-700 mb-3"
          >
            สวัสดีครับ
          </div>
          <div
            class="text-sm text-neutral-400 font-normal"
          >
            แอปพลิเคชัน React • React Application
          </div>
        </div>
        <div
          class="text-right"
        >
          <div
            class="w-12 h-12 border-2 border-green-200 rounded-lg flex items-center justify-center mb-3 bg-green-50"
          >
            🌸
          </div>
          <div
            class="text-xs text-neutral-400 font-normal"
          >
            เตรียมพร้อม: เรียบร้อย
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="px-6 pb-6 max-w-6xl mx-auto"
  >
    <div
      class="grid lg:grid-cols-2 gap-8"
    >
      <div
        class="bg-white rounded-lg p-8 shadow border border-neutral-200"
      >
        <div
          class="flex items-center space-x-4 mb-8"
        >
          <div
            class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
          >
            ⚡
          </div>
          <div>
            <h2
              class="text-2xl font-normal text-neutral-700"
            >
              คุณลักษณะ
            </h2>
            <p
              class="text-sm text-neutral-500 font-normal"
            >
              Features
            </p>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-green-500"
              >
                ⚡
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    การพัฒนาที่รวดเร็ว
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    Vite
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  Fast Development with Vite
                </div>
              </div>
            </div>
            <div
              class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
            >
              พร้อมใช้งาน
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-blue-500"
              >
                ⚛️
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    React 18
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    Latest
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  เวอร์ชันล่าสุด
                </div>
              </div>
            </div>
            <div
              class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
            >
              อัปเดต
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-purple-500"
              >
                🎨
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    Tailwind CSS
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    Styling
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  การจัดรูปแบบ
                </div>
              </div>
            </div>
            <div
              class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
            >
              ใช้งานได้
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 hover:bg-neutral-50 rounded-md transition-colors duration-200"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="w-12 h-12 rounded-lg flex items-center justify-center text-white shadow-sm bg-red-500"
              >
                🔥
              </div>
              <div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-medium text-neutral-700"
                  >
                    Hot Reload
                  </span>
                  <span
                    class="text-sm text-neutral-500 font-normal"
                  >
                    Live
                  </span>
                </div>
                <div
                  class="text-sm text-neutral-600 font-normal"
                >
                  รองรับการอัปเดตสด
                </div>
              </div>
            </div>
            <div
              class="text-xs text-green-700 bg-green-100 px-3 py-1 rounded-full font-normal"
            >
              เชื่อมต่อแล้ว
            </div>
          </div>
          <div
            class="pt-4 border-t border-neutral-200"
          >
            <button
              class="w-full text-neutral-500 py-3 rounded-md font-normal hover:bg-neutral-50 hover:text-neutral-700 transition-colors duration-200"
            >
              ดูคุณลักษณะทั้งหมด • View All Features
            </button>
          </div>
        </div>
      </div>
      <div
        class="bg-white rounded-lg p-8 shadow border border-neutral-200"
      >
        <div
          class="flex items-center space-x-4 mb-8"
        >
          <div
            class="bg-green-50 text-green-500 rounded-lg w-12 h-12 flex items-center justify-center"
          >
            🚀
          </div>
          <div>
            <h2
              class="text-2xl font-normal text-neutral-700"
            >
              เริ่มต้นใช้งาน
            </h2>
            <p
              class="text-sm text-neutral-500 font-normal"
            >
              Getting Started
            </p>
          </div>
        </div>
        <div
          class="space-y-6"
        >
          <div
            class="text-center space-y-4"
          >
            <div
              class="w-20 h-20 bg-gradient-to-br from-green-500 to-green-600 rounded-full flex items-center justify-center shadow-lg mx-auto"
            >
              <span
                class="text-white text-2xl"
              >
                🌸
              </span>
            </div>
            <div>
              <div
                class="text-xl font-medium text-neutral-700 mb-2"
              >
                ยินดีต้อนรับสู่โลกแห่งซากุระ
              </div>
              <div
                class="text-sm text-neutral-500 font-normal"
              >
                Welcome to your elegant React Application
              </div>
            </div>
          </div>
          <div
            class="space-y-6"
          >
            <div>
              <label
                class="block text-sm font-medium text-neutral-700 mb-3"
              >
                ชื่อผู้ใช้ • Username
              </label>
              <div
                class="relative"
              >
                <span
                  class="absolute left-4 top-1/2 transform -translate-y-1/2 text-neutral-400"
                >
                  👤
                </span>
                <input
                  class="w-full pl-12 pr-4 py-3 border border-neutral-200 rounded-md focus:ring-2 focus:ring-green-500 focus:border-transparent bg-neutral-50 font-normal"
                  placeholder="กรอกชื่อของคุณ"
                  type="text"
                />
              </div>
            </div>
            <button
              class="w-full bg-green-500 text-white py-3 rounded-md font-medium hover:bg-green-600 transition-colors duration-200 shadow-sm hover:shadow-md"
            >
              เริ่มต้นใช้งาน • Get Started
            </button>
            <button
              class="w-full text-center bg-blue-50 text-blue-700 border-2 border-blue-200 hover:border-blue-300 hover:bg-blue-100 py-3 rounded-md font-medium transition-all duration-200 shadow-sm hover:shadow-md"
            >
              📚 เอกสารประกอบ • Documentation
            </button>
          </div>
          <div
            class="pt-4 border-t border-neutral-200"
          >
            <div
              class="text-xs text-neutral-400 text-center font-normal"
            >
              อัปเดตล่าสุด: เมื่อกี้นี้ • Last updated: just now
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Individual Components Snapshot Tests > should render PoemPage component correctly 1`] = `
<div
  class="min-h-screen bg-gradient-to-b from-amber-50 to-orange-50"
>
  <div
    class="container mx-auto px-6 py-12"
  >
    <div
      class="text-center mb-12"
    >
      <h1
        class="text-4xl font-bold text-amber-800 mb-4"
      >
        กลอนดัง
      </h1>
      <div
        class="w-24 h-1 bg-gradient-to-r from-amber-400 to-orange-400 mx-auto rounded-full"
      />
    </div>
    <div
      class="max-w-4xl mx-auto"
    >
      <div
        class="bg-white rounded-3xl shadow-xl overflow-hidden"
      >
        <div
          class="relative bg-gradient-to-br from-amber-100 to-orange-100 p-8"
        >
          <div
            class="flex justify-center"
          >
            <img
              alt="Young boy smiling"
              class="w-64 h-64 object-cover rounded-2xl shadow-lg border-4 border-white"
              src="/poem.png"
            />
          </div>
        </div>
        <div
          class="p-8 lg:p-12"
        >
          <div
            class="text-center mb-8"
          >
            <h2
              class="text-2xl font-semibold text-amber-800 mb-6"
            >
              "ไม่ต้องบินให้สูงอย่างใครเขา"
            </h2>
          </div>
          <div
            class="prose prose-lg max-w-none text-center"
          >
            <div
              class="bg-gradient-to-r from-amber-50 to-orange-50 rounded-2xl p-8 border-l-4 border-amber-400"
            >
              <p
                class="text-lg leading-relaxed text-gray-700 mb-6"
              >
                <span
                  class="font-medium text-amber-800"
                >
                  "ไม่ต้องบินให้สูงอย่างใครเขา"
                </span>
                เป็นวลีที่ได้รับความนิยมในประเทศไทยช่วงนี้
              </p>
              <p
                class="text-lg leading-relaxed text-gray-700 mb-8"
              >
                เป็นส่วนหนึ่งของบทกลอนที่ว่า
              </p>
              <div
                class="bg-white rounded-xl p-6 shadow-md border border-amber-200"
              >
                <div
                  class="text-xl leading-relaxed text-amber-900 space-y-4"
                >
                  <p
                    class="font-medium"
                  >
                    "ไม่ต้องบินให้สูงอย่างใครเขา
                  </p>
                  <p
                    class="font-medium"
                  >
                    จงบินเอาเท่าที่เราจะบินไหว
                  </p>
                  <p
                    class="font-medium"
                  >
                    ถ้าที่บินไม่จำเป็นต้องเหมือนใคร
                  </p>
                  <p
                    class="font-medium"
                  >
                    แค่บินไปให้ถึงฝันเท่านั้นพอ"
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex justify-center mt-8 space-x-4"
          >
            <div
              class="w-3 h-3 bg-amber-400 rounded-full"
            />
            <div
              class="w-3 h-3 bg-orange-400 rounded-full"
            />
            <div
              class="w-3 h-3 bg-amber-400 rounded-full"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navigation Bar Snapshot Tests > should render navigation with different active states > navigation-root 1`] = `
<nav
  class="bg-white shadow-sm border-b border-stone-200"
>
  <div
    class="container mx-auto px-6"
  >
    <div
      class="flex justify-between items-center py-4"
    >
      <div
        class="flex items-center space-x-3"
      >
        <div
          class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
        >
          <span
            class="text-white text-sm font-bold"
          >
            🌸
          </span>
        </div>
        <h1
          class="text-xl font-medium text-stone-800 tracking-wide"
        >
          จงบินเอาเท่าที่เราจะบินไหว
          <span
            class="text-sm text-stone-500 ml-2 font-light"
          >
            Flying App
          </span>
        </h1>
      </div>
      <div
        class="flex space-x-3"
      >
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-green-500 text-white shadow-md"
          data-discover="true"
          href="/hello"
        >
          <span
            class="text-lg"
          >
            🌸
          </span>
          <span
            class="text-sm font-medium"
          >
            หน้าแรก
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/home"
        >
          <span
            class="text-lg"
          >
            🏦
          </span>
          <span
            class="text-sm font-medium"
          >
            ธนาคาร
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/music"
        >
          <span
            class="text-lg"
          >
            🎵
          </span>
          <span
            class="text-sm font-medium"
          >
            กลอนดัง
          </span>
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Navigation Bar Snapshot Tests > should render navigation with different active states > navigation-roothello 1`] = `
<nav
  class="bg-white shadow-sm border-b border-stone-200"
>
  <div
    class="container mx-auto px-6"
  >
    <div
      class="flex justify-between items-center py-4"
    >
      <div
        class="flex items-center space-x-3"
      >
        <div
          class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
        >
          <span
            class="text-white text-sm font-bold"
          >
            🌸
          </span>
        </div>
        <h1
          class="text-xl font-medium text-stone-800 tracking-wide"
        >
          จงบินเอาเท่าที่เราจะบินไหว
          <span
            class="text-sm text-stone-500 ml-2 font-light"
          >
            Flying App
          </span>
        </h1>
      </div>
      <div
        class="flex space-x-3"
      >
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-green-500 text-white shadow-md"
          data-discover="true"
          href="/hello"
        >
          <span
            class="text-lg"
          >
            🌸
          </span>
          <span
            class="text-sm font-medium"
          >
            หน้าแรก
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/home"
        >
          <span
            class="text-lg"
          >
            🏦
          </span>
          <span
            class="text-sm font-medium"
          >
            ธนาคาร
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/music"
        >
          <span
            class="text-lg"
          >
            🎵
          </span>
          <span
            class="text-sm font-medium"
          >
            กลอนดัง
          </span>
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Navigation Bar Snapshot Tests > should render navigation with different active states > navigation-roothome 1`] = `
<nav
  class="bg-white shadow-sm border-b border-stone-200"
>
  <div
    class="container mx-auto px-6"
  >
    <div
      class="flex justify-between items-center py-4"
    >
      <div
        class="flex items-center space-x-3"
      >
        <div
          class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
        >
          <span
            class="text-white text-sm font-bold"
          >
            🌸
          </span>
        </div>
        <h1
          class="text-xl font-medium text-stone-800 tracking-wide"
        >
          จงบินเอาเท่าที่เราจะบินไหว
          <span
            class="text-sm text-stone-500 ml-2 font-light"
          >
            Flying App
          </span>
        </h1>
      </div>
      <div
        class="flex space-x-3"
      >
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/hello"
        >
          <span
            class="text-lg"
          >
            🌸
          </span>
          <span
            class="text-sm font-medium"
          >
            หน้าแรก
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-green-600 text-white shadow-md"
          data-discover="true"
          href="/home"
        >
          <span
            class="text-lg"
          >
            🏦
          </span>
          <span
            class="text-sm font-medium"
          >
            ธนาคาร
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/music"
        >
          <span
            class="text-lg"
          >
            🎵
          </span>
          <span
            class="text-sm font-medium"
          >
            กลอนดัง
          </span>
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Navigation Bar Snapshot Tests > should render navigation with different active states > navigation-rootmusic 1`] = `
<nav
  class="bg-white shadow-sm border-b border-stone-200"
>
  <div
    class="container mx-auto px-6"
  >
    <div
      class="flex justify-between items-center py-4"
    >
      <div
        class="flex items-center space-x-3"
      >
        <div
          class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-full flex items-center justify-center"
        >
          <span
            class="text-white text-sm font-bold"
          >
            🌸
          </span>
        </div>
        <h1
          class="text-xl font-medium text-stone-800 tracking-wide"
        >
          จงบินเอาเท่าที่เราจะบินไหว
          <span
            class="text-sm text-stone-500 ml-2 font-light"
          >
            Flying App
          </span>
        </h1>
      </div>
      <div
        class="flex space-x-3"
      >
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/hello"
        >
          <span
            class="text-lg"
          >
            🌸
          </span>
          <span
            class="text-sm font-medium"
          >
            หน้าแรก
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-stone-100 text-stone-700 hover:bg-stone-200 hover:shadow-sm"
          data-discover="true"
          href="/home"
        >
          <span
            class="text-lg"
          >
            🏦
          </span>
          <span
            class="text-sm font-medium"
          >
            ธนาคาร
          </span>
        </a>
        <a
          class="px-5 py-2 rounded-full transition-all duration-300 flex items-center space-x-2 bg-amber-500 text-white shadow-md"
          data-discover="true"
          href="/music"
        >
          <span
            class="text-lg"
          >
            🎵
          </span>
          <span
            class="text-sm font-medium"
          >
            กลอนดัง
          </span>
        </a>
      </div>
    </div>
  </div>
</nav>
`;
